Refactoring and add command to AlarmClockController